Fix overflow on elements for small widths.

--- a/css/master.css
+++ b/css/master.css
@@ -13,6 +13,8 @@ html {
 }
 
 body {
+  /* position: relative; */
+  min-width: 980px;
   font-family: arial,sans-serif;
   font-size: 14px;
 }
@@ -181,9 +183,11 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  min-width: 980px;
   border-top: 1px solid #e4e4e4;
   background: #f2f2f2;
   color: rgba(0, 0, 0, 0.54);
+  white-space: nowrap;
   line-height: 40px;
   font-size: 14px;
 }
